syntax = "proto3";

import "status_code.proto";

package lightdfs.metaserver;

option cc_generic_services = true;

message AddBlockRequest {
    int64 sequence_id = 1;
    string file_name = 2;
    string client_address = 3;
}
message AddBlockResponse {
    int64 sequence_id = 1;
    StatusCode status = 2;
}

message SyncBlockRequest {
    int64 sequence_id = 1;
    int64 block_id = 2;
    string file_name = 3;
    int64 size = 4;
}

message SyncBlockResponse {
    int64 sequence_id = 1;
    StatusCode status = 2;
}

message FinishBlockRequest {
    int64 sequence_id = 1;
    int64 block_id = 2;
    int64 block_version = 3;
    string file_name = 4;
    int64 block_size = 5;
    bool close_with_error = 6;
}
message FinishBlockResponse {
    int64 sequence_id = 1;
    StatusCode status = 2;
}

message RemoveBlockRequest {
    int64 sequence_id = 1;
    int64 block_id = 2;
}

message RemoveBlockResponse {
    int64 sequence_id = 1;
    StatusCode status = 2;
}

service MetaServer {
    rpc AddBlock(AddBlockRequest) returns(AddBlockResponse);
    rpc SyncBlock(SyncBlockRequest) returns(SyncBlockResponse);
    rpc FinishBlock(FinishBlockRequest) returns(FinishBlockResponse);
    rpc RemoveBlock(RemoveBlockRequest) returns(RemoveBlockResponse);
}